--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,8 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html", title: "About me"}
   - {file: "README.md", title: "Also about me"}
+  - {title: "Nederlands Taal"}
+  - {title: "CV"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:dg4978@outlook.com"}
