Update _config.yml software engineer title added

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "CV"
+title: "Daniel Griffiths Software Engineer (Junior)"
 author: "Daniel Griffiths"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
