--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "About me"}
-  - {file: "README.md", title: "Also about me"}
+  - {file: "index.html", title: "Front Page"}
+  - {file: "README.md", title: "CV"}
+  - {title: "The Journey so far..."}
   - {title: "Nederlands Taal"}
-  - {title: "CV"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:dg4978@outlook.com"}
