--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "Home Page"}
+  - {file: "index.html", title: "Home"}
   - {file: "README.md", title: "CV"}
   - {title: "The Journey so far..."}
   - {title: "Nederlands Taal"}
