--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html", title: "Home"}
   - {file: "README.md", title: "CV"}
   - {file: "thejourney.md", title: "The Journey so far..."}
-  - {title: "Blog"}
+  - {file: "blog.md", title: "Blog"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:dg4978@outlook.com"}
