--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html", title: "Home"}
   - {file: "README.md", title: "CV"}
-  - {file: "thejourney.md", title: "The Journey so far..."}
+  - {file: "thejourney.md", title: "Study"}
+  - {file: "projects.md", title: "Projects"}
   - {file: "blog.md", title: "Blog"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
