--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.md", title: "Home"}
+  - {file: "aboutme.md", title: "Home"}
   - {file: "README.md", title: "CV"}
   - {file: "thejourney.md", title: "Study"}
   - {file: "projects.md", title: "Projects"}
