--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", title: "Home"}
-  - {file: "CV.md", title: "CV"}
+  - {file: "CV.md", title: "CV / Resume"}
   - {file: "thejourney.md", title: "Study"}
   - {file: "projects.md", title: "Projects"}
   - {file: "404.html", title: "Blog"}
